--- a/SubBox/SubBox.csproj
+++ b/SubBox/SubBox.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
+    <ApplicationIcon>LogoRedRound.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup>
