channel pictures are now stored locally

--- a/SubBox/SubBox.csproj
+++ b/SubBox/SubBox.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\channelPictures\" />
+  </ItemGroup>
+
 </Project>
