--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,5 @@ healthchecksdb
 /SubBox/wwwroot/media/0910.png
 /SubBox/settings.json
 /SubBox/settings.json.backup
+/SubBox/youtube-dl_OLD.exe
+/SubBox/saves_intro181.db
