--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,4 @@ healthchecksdb
 /SubBox/settings.json.backup
 /SubBox/youtube-dl_OLD.exe
 /SubBox/saves_intro181.db
+/SubBox/wwwroot/channelPictures/*
